--- a/config/plurios.conf
+++ b/config/plurios.conf
@@ -5,11 +5,11 @@
 # ISO image name
 NAME_ISO="plurios"
 
-# specify a variant, example: "oit"
-VARIANT_ISO="oit"
+# specify a variant, example: "pro, edu or aymara"
+VARIANT_ISO="pro"
 
 # specify a version for the ISO image
-VERSION_ISO="2.5"
+VERSION_ISO="2.5.1"
 
 # Specify an architecture, amd64 is recommended (this does not generate the system with that architecture)
 ARCH_ISO="amd64"
