--- a/config/variables.conf
+++ b/config/variables.conf
@@ -8,6 +8,8 @@ DIR_CONF_IMAGE="config/image"
 DIR_CONF_CALAMARES="config/custom/calamares"
 DIR_WALLPAPER="config/custom/wallpapers"
 
+# === Editions ===
+DIR_EDITIONS="$SCRIPT_DIR/config/plurios"
 
 # === workspace ====
 ISO_DIR="$SCRIPT_DIR/$WORKSPACE/iso"
