--- a/config/variables.conf
+++ b/config/variables.conf
@@ -3,6 +3,7 @@ LIB_PLURIOS="lib/plurioslib"
 CONF_PLURIOS="config/plurios.conf"
 CONF_PREPARE_ISO="config/prepare-iso-live/prepare"
 CONF_DOTFILES="config/dotfiles"
+CONF_GRUB="config/custom/grub/grub"
 DIR_CONF_PLURIOS="config/plurios"
 DIR_CONF_IMAGE="config/image"
 DIR_CONF_CALAMARES="config/custom/calamares"
