--- a/config/dotfiles/.config/terminator/config
+++ b/config/dotfiles/.config/terminator/config
@@ -3,6 +3,7 @@
 [profiles]
   [[default]]
     foreground_color = "#ffffff"
+    scrollback_infinite = True
     palette = "#000000:#cd0000:#00cd00:#cdcd00:#0000ee:#cd00cd:#00cdcd:#ffffff:#7f7f7f:#ff0000:#00ff00:#ffff00:#5c5cff:#ff00ff:#00ffff:#ffffff"
 [layouts]
   [[default]]
