--- a/config/custom/calamares/ubuntuunity/calamares/modules/partition.conf
+++ b/config/custom/calamares/ubuntuunity/calamares/modules/partition.conf
@@ -4,7 +4,7 @@ luksGeneration: luks2
 userSwapChoices:
     - none
     - file
-initialSwapChoice: file
+initialSwapChoice: none
 drawNestedPartitions: true
 defaultFileSystemType: "ext4"
 availableFileSystemTypes: ["ext4","btrfs","xfs"]
