updated variables file

--- a/config/variables.conf
+++ b/config/variables.conf
@@ -8,6 +8,7 @@ DIR_CONF_PLURIOS="config/plurios"
 DIR_CONF_IMAGE="config/image"
 DIR_CONF_CALAMARES="config/custom/calamares"
 DIR_WALLPAPER="config/custom/wallpapers"
+DIR_ETC="config/custom/etc"
 
 # === Editions ===
 DIR_EDITIONS="$SCRIPT_DIR/config/plurios"
