--- a/config/plurios.conf
+++ b/config/plurios.conf
@@ -28,11 +28,12 @@ DISC_LABEL_NAME='PluriOS "Metadistro Linux Bolivia"'
 # example: plurios-oit-0.1-amd64.iso
 TARGET_NAME="${NAME_ISO}-${VARIANT_ISO}-${VERSION_ISO}-${ARCH_ISO}"
 
+
+# not working
 ####################
 # Calamares option #
 ####################
 
-# use option : debian, ubuntuunity
-# debian package: calamares-settings-ubuntu
+# use option : ubuntuunity
 # ubuntuunity package: calamares-settings-ubuntu-unity
-DIR_CALAMARES="ubuntuunity"
+#DIR_CALAMARES="ubuntuunity"
