unnecessary code removed

--- a/config/variables.conf
+++ b/config/variables.conf
@@ -6,7 +6,7 @@ CONF_DOTFILES="config/dotfiles"
 CONF_GRUB="config/custom/grub/grub"
 DIR_CONF_PLURIOS="config/plurios"
 DIR_CONF_IMAGE="config/image"
-DIR_CONF_CALAMARES="config/custom/calamares"
+#DIR_CONF_CALAMARES="config/custom/calamares"
 DIR_WALLPAPER="config/custom/wallpapers"
 DIR_ETC="config/custom/etc"
 
