plurios.conf updated

--- a/config/plurios.conf
+++ b/config/plurios.conf
@@ -22,18 +22,8 @@ COMPRESSION="zstd"
 URL_SUPPORT="https://plurios.openit.dev"
 
 # label of disc
-DISC_LABEL_NAME='PluriOS "Metadistro Linux Bolivia"'
+DISC_LABEL_NAME='PluriOS "Metadistro Linux Boliviana"'
 
 # variables xorriso
 # example: plurios-oit-0.1-amd64.iso
 TARGET_NAME="${NAME_ISO}-${VARIANT_ISO}-${VERSION_ISO}-${ARCH_ISO}"
-
-
-# not working
-####################
-# Calamares option #
-####################
-
-# use option : ubuntuunity
-# ubuntuunity package: calamares-settings-ubuntu-unity
-#DIR_CALAMARES="ubuntuunity"
