--- a/config/variables.conf
+++ b/config/variables.conf
@@ -1,14 +1,16 @@
 # === list of variables ===
 LIB_PLURIOS="lib/plurioslib"
 CONF_PLURIOS="config/plurios.conf"
-CONF_PREPARE_ISO="config/prepare-iso-live/prepare"
+
 CONF_DOTFILES="config/dotfiles"
 CONF_GRUB="config/custom/grub/grub"
 DIR_CONF_PLURIOS="config/plurios"
 DIR_CONF_IMAGE="config/image"
-#DIR_CONF_CALAMARES="config/custom/calamares"
 DIR_WALLPAPER="config/custom/wallpapers"
 DIR_ETC="config/custom/etc"
+
+DIR_CONF_CORE="config/plurios/core"
+DIR_CONF_PREPARE_ISO="config/prepare-iso-live"
 
 # === Editions ===
 DIR_EDITIONS="$SCRIPT_DIR/config/plurios"
@@ -19,4 +21,9 @@ MNT_DIR="$SCRIPT_DIR/$WORKSPACE/mnt"
 EXTRACT_DIR="$SCRIPT_DIR/$WORKSPACE/extract"
 IMAGE_DIR="$SCRIPT_DIR/$WORKSPACE/image"
 CUSTOM_DIR="$SCRIPT_DIR/$WORKSPACE/custom"
+TEMPLATE_DIR="$SCRIPT_DIR/$WORKSPACE/template"
 APT_DIR="$SCRIPT_DIR/apt-cache"
+
+# === compression options ===
+OPTS_ZSTD="-Xcompression-level 19 -b 1024K -always-use-fragments -noappend -quiet -progress"
+OPTS_XZ="-Xbcj x86 -Xdict-size 100% -b 1024K -always-use-fragments -noappend -quiet -progress"
