refactor: changing directory color for Terminator

--- a/config/dotfiles/.config/terminator/config
+++ b/config/dotfiles/.config/terminator/config
@@ -4,7 +4,7 @@
   [[default]]
     foreground_color = "#ffffff"
     scrollback_infinite = True
-    palette = "#000000:#cd0000:#00cd00:#cdcd00:#0000ee:#cd00cd:#00cdcd:#ffffff:#7f7f7f:#ff0000:#00ff00:#ffff00:#5c5cff:#ff00ff:#00ffff:#ffffff"
+    palette = "#000000:#cd0000:#00cd00:#cdcd00:#0053a0:#cd00cd:#00cdcd:#ffffff:#7f7f7f:#ff0000:#00ff00:#ffff00:#5c5cff:#ff00ff:#00ffff:#ffffff"
 [layouts]
   [[default]]
     [[[window0]]]
